--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -9,3 +9,9 @@ spring:
   mvc.view:
     prefix: /WEB-INF/
     suffix: .jsp
+
+logging.level:
+  root: INFO
+  org.superbiz.moviefun: DEBUG
+  org.superbiz.moviefun.albums.AlbumsController: ERROR
+  org.superbiz.moviefun.movies.MovieBean: DEBUG
