Background Jobs using AMQP

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -11,5 +11,8 @@ spring:
     suffix: .jsp
 
 logging.level:
-  root: WARN
+  root: INFO
   org.superbiz.moviefun: DEBUG
+
+rabbitmq:
+  queue: my-rabbit-queue
